# tick-mcp

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
deploy/: .env.example  docker-compose.yml
src/k_tick_mcp/: config.py  server.py
src/k_tick_mcp/mcp_api/: core.py  read.py  verified.py
src/k_tick_mcp/services/: query_presets.py
src/tick_mcp/: .env.example  admin_service.py  cli.py  config.py  config.yaml  http_app.py  main.py  telegram_admin.py
src/tick_mcp/admin/: __init__.py  cli.py  service.py  telegram.py
src/tick_mcp/client_api/: transport.py
src/tick_mcp/mcp_api/: core.py  read.py  utilities.py
tests/: conftest.py  test_admin_service.py  test_cli.py  test_config.py  test_http_app.py  test_main.py  test_telegram_admin.py  test_views_safe.py
